data/diff_tests/wasmtime/return_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3084.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7f\02\94\80\80\80\00\01\03\65\6e\76\0c\69"
    "\6d\70\6f\72\74\65\64\46\75\6e\63\00\00\03\82\80"
    "\80\80\00\01\00\07\8c\80\80\80\00\01\08\74\65\73"
    "\74\46\75\6e\63\00\01\0a\90\80\80\80\00\01\8a\80"
    "\80\80\00\00\41\2a\10\00\41\01\6a\0f\0b"
  )
""
)